edition = "2023";
package testgen;

import "confpb/v1/field.proto";

option go_package = ".;main";

option features.field_presence = IMPLICIT;

message Bool {
  bool normal = 1 [(confpb.v1.env) = "BOOL"];
  bool with_presence = 2 [(confpb.v1.env) = "BOOL_WITH_PRESENCE", features.field_presence = EXPLICIT];
  repeated bool list = 3 [(confpb.v1.env) = "BOOL_LIST"];

  oneof oneof_test {
    bool oneof_option_a = 4 [(confpb.v1.env) = "BOOL_ONEOF_A"];
    bool oneof_option_b = 5 [(confpb.v1.env) = "BOOL_ONEOF_B"];
  }
}
